manifests/ingress/ingress-bookinfo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-productpage
  namespace: bookinfo
spec:
  ingressClassName: nginx
  rules:
    - host: www.bookinfo.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: productpage
                port:
                  number: 9080
            path: /
