manifests/ingress/ingress-hipstershop.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  namespace: hipstershop
spec:
  ingressClassName: nginx
  rules:
    - host: www.hipstershop.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /
